--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.2",
+    "@mui/x-date-pickers": "^6.10.1",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.32.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
