--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-REACT_APP_API_URL=https://q0n3jsz1v7.execute-api.ap-southeast-1.amazonaws.com/dev/swagger?fbclid=IwAR1XM-ODk90cnQ20MZI4do8tSBI4AnD40DLanJuallpuHcmQ2F11SOAdpwc#/
-
+VITE_REACT_APP_API_URL=https://0y7kmzylv3.execute-api.ap-southeast-1.amazonaws.com/dev
 VITE_AWS_REGION=ap-southeast-1
 VITE_AWS_ACCESS_KEY_ID=AKIAVHPQYN7SQDSOWQPW
 VITE_AWS_SECRET_ACCESS_KEY=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
