--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_REACT_APP_API_URL=https://0y7kmzylv3.execute-api.ap-southeast-1.amazonaws.com/dev
+VITE_REACT_APP_API_URL=https://x-pandit-tuyentran2k1213.vercel.app
 VITE_AWS_REGION=ap-southeast-1
 VITE_AWS_ACCESS_KEY_ID=AKIAVHPQYN7SQDSOWQPW
 VITE_AWS_SECRET_ACCESS_KEY=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
